Parse compile items and references

--- a/Cpc.CsMerge.Test/Cpc.CsMerge.Test.csproj
+++ b/Cpc.CsMerge.Test/Cpc.CsMerge.Test.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsProjParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlTestHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cpc.CsMerge.Core\Cpc.CsMerge.Core.csproj">
@@ -56,6 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <EmbeddedResource Include="SampleFiles\NugetPackages.config.sample" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SampleFiles\ProjectFile.csproj.sample" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
