--- a/Cpc.CsMerge.Test/SampleFiles/ProjectFile.csproj.sample
+++ b/Cpc.CsMerge.Test/SampleFiles/ProjectFile.csproj.sample
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BD6AF56E-5128-4E09-852D-159BB21972D3}</ProjectGuid>
+    <ProjectGuid>{CBB1F300-EDC2-486E-ADAB-70556A4D5500}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cpc.CsMerge.Core</RootNamespace>
-    <AssemblyName>Cpc.CsMerge.Core</AssemblyName>
+    <RootNamespace>Cpc.CsMerge.Test</RootNamespace>
+    <AssemblyName>Cpc.CsMerge.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NSubstitute">
+      <HintPath>..\packages\NSubstitute.1.7.2.0\lib\NET45\NSubstitute.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,16 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Compile.cs" />
-    <Compile Include="Core\Item.cs" />
-    <Compile Include="Core\ItemGroup.cs" />
-    <Compile Include="Core\ProjectReference.cs" />
-    <Compile Include="Core\Reference.cs" />
-    <Compile Include="Parsing\CsProjParser.cs" />
-    <Compile Include="Core\ProjectFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Cpc.CsMerge.Core\Cpc.CsMerge.Core.csproj">
+      <Project>{bd6af56e-5128-4e09-852d-159bb21972d3}</Project>
+      <Name>Cpc.CsMerge.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
