WIP on not needing package re-install

--- a/Cpc.CsMerge.Core/Cpc.CsMerge.Core.csproj
+++ b/Cpc.CsMerge.Core/Cpc.CsMerge.Core.csproj
@@ -30,6 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Configit.Base, Version=4.0.46.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Configit.Base.4.0.46\lib\net40-Client\Configit.Base.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ionic.Zip.Reduced, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
+      <HintPath>..\packages\DotNetZip.Reduced.1.9.1.8\lib\net20\Ionic.Zip.Reduced.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Security.Cryptography, Version=1.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Security.Cryptography.1.6.622.0\lib\Security.Cryptography.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,17 +51,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Compile.cs" />
     <Compile Include="Core\Conflict.cs" />
+    <Compile Include="Core\FileIncludeItem.cs" />
     <Compile Include="Core\Item.cs" />
     <Compile Include="Core\ItemGroup.cs" />
+    <Compile Include="Core\Package.cs" />
+    <Compile Include="Core\PackageVersion.cs" />
     <Compile Include="Core\ProjectReference.cs" />
     <Compile Include="Core\Reference.cs" />
     <Compile Include="Parsing\CsProjParser.cs" />
     <Compile Include="Core\ProjectFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
