--- a/CsMerge/CsMerge.csproj
+++ b/CsMerge/CsMerge.csproj
@@ -54,10 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsMerge.cs" />
     <Compile Include="GitHelper.cs" />
     <Compile Include="PackagesConfigMerger.cs" />
     <Compile Include="PackagesInfo.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="ProjectMerger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserResolvers.cs" />
