--- a/CsMerge/CsMerge.csproj
+++ b/CsMerge/CsMerge.csproj
@@ -73,9 +73,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Cpc.CsMerge.Core\Cpc.CsMerge.Core.csproj">
+    <ProjectReference Include="..\Cpc.CsMerge.Core\CsMerge.Core.csproj">
       <Project>{bd6af56e-5128-4e09-852d-159bb21972d3}</Project>
-      <Name>Cpc.CsMerge.Core</Name>
+      <Name>CsMerge.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
