--- a/CsMerge/packages.config
+++ b/CsMerge/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" userInstalled="true" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.55" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" userInstalled="true" />
   <package id="NLog" version="4.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="NuGet.Core" version="2.8.5" targetFramework="net45" userInstalled="true" />
 </packages>
