--- a/CsMerge/packages.config
+++ b/CsMerge/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetZip" version="1.9.3" targetFramework="net45" userInstalled="true" />
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" userInstalled="true" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.55" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" userInstalled="true" />
