--- a/binaries/CsMerge.exe.config
+++ b/binaries/CsMerge.exe.config
@@ -11,7 +11,7 @@
   <applicationSettings>
     <CsMerge.Properties.Settings>
       <setting name="Debug" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </CsMerge.Properties.Settings>
   </applicationSettings>
