--- a/Cpc.CsMerge.Core/CsMerge.Core.csproj
+++ b/Cpc.CsMerge.Core/CsMerge.Core.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\LibGit2Sharp.0.21.0.176\build\net40\LibGit2Sharp.props" Condition="Exists('..\packages\LibGit2Sharp.0.21.0.176\build\net40\LibGit2Sharp.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LibGit2Sharp, Version=0.21.0.176, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LibGit2Sharp.0.21.0.176\lib\net40\LibGit2Sharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.0.1\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
@@ -43,8 +48,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\AutoResolveType.cs" />
     <Compile Include="Core\Conflict.cs" />
-    <Compile Include="Core\FileIncludeItem.cs" />
+    <Compile Include="Core\Extensions.cs" />
+    <Compile Include="Core\GitHelper.cs" />
+    <Compile Include="Core\IConflict.cs" />
+    <Compile Include="Core\KeyHelper.cs" />
+    <Compile Include="Core\LibGit2SharpExtensions.cs" />
+    <Compile Include="Core\MergeResult.cs" />
+    <Compile Include="Core\MergeType.cs" />
+    <Compile Include="Core\MergeTypeExtensions.cs" />
+    <Compile Include="Core\PackagesConfigMerger.cs" />
+    <Compile Include="Core\ProjectMerger.cs" />
+    <Compile Include="Core\ProjectPackages.cs" />
+    <Compile Include="Exceptions\InvalidResolutonException.cs" />
+    <Compile Include="Exceptions\MergeAbortException.cs" />
+    <Compile Include="Resolvers\MergeHelper.cs" />
+    <Compile Include="Resolvers\IConflictResolver.cs" />
     <Compile Include="Core\IKeyedEntry.cs" />
     <Compile Include="Core\Item.cs" />
     <Compile Include="Core\ItemGroup.cs" />
@@ -57,11 +77,20 @@
     <Compile Include="Parsing\CsProjParser.cs" />
     <Compile Include="Core\ProjectFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resolvers\IDuplicateResolver.cs" />
+    <Compile Include="Resolvers\PackageConflictResolver.cs" />
+    <Compile Include="Resolvers\ReferenceConflictResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\LibGit2Sharp.0.21.0.176\build\net40\LibGit2Sharp.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\LibGit2Sharp.0.21.0.176\build\net40\LibGit2Sharp.props'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
