--- a/CsMerge/CsMerge.csproj
+++ b/CsMerge/CsMerge.csproj
@@ -25,7 +25,8 @@
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\CsMerge.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -63,22 +64,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsMerge.cs" />
-    <Compile Include="GitHelper.cs" />
-    <Compile Include="MergeType.cs" />
-    <Compile Include="MergeHelper.cs" />
-    <Compile Include="MergeResult.cs" />
     <Compile Include="PackageReferenceAligner.cs" />
-    <Compile Include="PackagesConfigMerger.cs" />
-    <Compile Include="ProjectPackages.cs" />
-    <Compile Include="ProjectMerger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="UserQuestion.cs" />
-    <Compile Include="UserResolvers.cs" />
+    <Compile Include="Resolvers\DuplicateItemOption.cs" />
+    <Compile Include="Resolvers\UserConflictResolver.cs" />
+    <Compile Include="Resolvers\UserDuplicateResolver.cs" />
+    <Compile Include="Resolvers\UserQuestion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
