--- a/PackagesMerge.Test/PackagesMerge.Test.csproj
+++ b/PackagesMerge.Test/PackagesMerge.Test.csproj
@@ -110,6 +110,18 @@
       <Project>{4EBE13DA-83CD-4B07-99ED-098EDE83F5E5}</Project>
       <Name>CsMerge</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CsUpdate.Core\CsUpdate.Core.csproj">
+      <Project>{ee69c9bf-e6e3-4257-ae82-44910c266f37}</Project>
+      <Name>CsUpdate.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NuGetHelpers\NuGetHelpers.csproj">
+      <Project>{DB65377A-F2EC-47DF-BB8B-3DB53CDF354A}</Project>
+      <Name>NuGetHelpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Project\Project.csproj">
+      <Project>{C3657091-FE14-4695-B531-6CABDAA40FB7}</Project>
+      <Name>Project</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="NLog.config">
