--- a/CsMerge.Core/CsMerge.Core.csproj
+++ b/CsMerge.Core/CsMerge.Core.csproj
@@ -91,32 +91,17 @@
   <ItemGroup>
     <Compile Include="Core\AutoResolveType.cs" />
     <Compile Include="Core\Conflict.cs" />
-    <Compile Include="Core\ConfigitPackageReference.cs" />
-    <Compile Include="Core\Extensions.cs" />
-    <Compile Include="Core\GitHelper.cs" />
     <Compile Include="Core\IConflict.cs" />
     <Compile Include="Core\KeyHelper.cs" />
     <Compile Include="Core\LibGit2SharpExtensions.cs" />
     <Compile Include="Core\MergeResult.cs" />
-    <Compile Include="Core\MergeType.cs" />
-    <Compile Include="Core\MergeTypeExtensions.cs" />
     <Compile Include="Core\PackagesConfigMerger.cs" />
     <Compile Include="Core\ProjectMerger.cs" />
-    <Compile Include="Core\SerialisationHelper.cs" />
     <Compile Include="Exceptions\InvalidResolutonException.cs" />
     <Compile Include="Exceptions\MergeAbortException.cs" />
     <Compile Include="Exceptions\UserQuitException.cs" />
     <Compile Include="Resolvers\MergeHelper.cs" />
     <Compile Include="Resolvers\IConflictResolver.cs" />
-    <Compile Include="Core\IConflictableItem.cs" />
-    <Compile Include="Core\Item.cs" />
-    <Compile Include="Core\ItemGroup.cs" />
-    <Compile Include="Core\ProjectReference.cs" />
-    <Compile Include="Core\RawItem.cs" />
-    <Compile Include="Core\Reference.cs" />
-    <Compile Include="Core\XExtensions.cs" />
-    <Compile Include="Parsing\CsProjParser.cs" />
-    <Compile Include="Core\ProjectFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolvers\IDuplicateResolver.cs" />
     <Compile Include="Resolvers\PackageConflictResolver.cs" />
@@ -124,6 +109,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NuGetHelpers\NuGetHelpers.csproj">
+      <Project>{db65377a-f2ec-47df-bb8b-3db53cdf354a}</Project>
+      <Name>NuGetHelpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Project\Project.csproj">
+      <Project>{c3657091-fe14-4695-b531-6cabdaa40fb7}</Project>
+      <Name>Project</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Parsing\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
